--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="image_put">
       <img src="./img/Screenshot 2023-05-04 032213.png" alt="image" />
       <!-- <b id="blink" style="opacity: 0">7507042350138</b> -->
+      <p class="valid">05/07/2023 to 04/08/2023</p>
     </div>
     <div class="bottom">
       <p>
