--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h5>E- Bus Pass</h5>
     </div>
     <div class="image_put">
-      <img src="./img/Screenshot 2023-05-04 032213.png" alt="image" />
+      <img src="./img/Screenshot 2023-05-04 032213.jgp" alt="image" />
       <!-- <b id="blink" style="opacity: 0">7507042350138</b> -->
       <p class="valid">05/08/2023 to 04/09/2023</p>
     </div>
